p in apiDoc should have the correct white space def

--- a/pages/typedoc/apiPage.style.scss
+++ b/pages/typedoc/apiPage.style.scss
@@ -284,6 +284,10 @@
         font-size: 1em;
     }
 
+    p {
+        white-space: pre-line;
+    }
+
     /**
    * * Improve readability of pre-formatted text in all browsers. */
     pre {
